rendered/cron.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: upi-os-cron
  name: upi-os-cron
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: upi-os-cron
  template:
    metadata:
      labels:
        app: upi-os-cron
    spec:
      containers:
        - image: upi-os:
          imagePullPolicy: Never
          name: upi-os-cron
      imagePullSecrets:
        - name: registry-secret
