rendered/upi-os-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upi-os-service
spec:
  selector:
    app: upi-os
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
